--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-ws": "^5.0.2",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
